--- a/RabbitMQProductAPI/RabbitMQProductAPI.csproj
+++ b/RabbitMQProductAPI/RabbitMQProductAPI.csproj
@@ -8,6 +8,17 @@
 
     <ItemGroup>
         <PackageReference Include="EntityFramework" Version="6.4.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.27" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.27">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.27" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.27" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.27">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="RabbitMQ.Client" Version="7.0.0-alpha.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
